--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="col-md-6 mx-auto">
 
-        <h3 class="text-center mb-3"><i class="fa-solid fa-flag-usa"></i> State Capital Look Up</h3>
+        <h3 class="text-center mb-3"><i class="fa-solid fa-flag"></i> State Capital Look Up</h3>
 
         <form class="form-group">
           <input type="text" id="search" class="form-control form-control-lg" placeholder="Enter state name or abbreviation">
